home page should be guuuuucci

--- a/app/views/pages/calendar.html.erb
+++ b/app/views/pages/calendar.html.erb
@@ -63,7 +63,7 @@
       <div class="aboutus-content">
         There are many ways you can help: organizing, participating, donating, and spreading the word!
         <div class="help-out-links">
-          <a class="help-out-link" href="/donate">Donation Info</a><a class="help-out-link" href="/social">Social Media</a>
+          <a class="help-out-link" href="/donate">Donation Info</a><a class="help-out-link" href="https://instagram.com/detrashers">Follow Us!</a>
         </div>
       </div>
     </div>
