--- a/app/views/pages/calendar.html.erb
+++ b/app/views/pages/calendar.html.erb
@@ -41,6 +41,9 @@
           <input class="form-control location-select-field" type="search" id="postcode" placeholder="Enter postal code" aria-label="Change Location" name="postcode">
           <br>
           <button class="location-select-btn" type="submit" href="/" value="postcode">Get Started</button>
+          <div class="explanation">
+            Enter your postal code to see a calendar view of cleanup opportunities in your community!
+          </div>
         </form>
       </div>
     </div>
@@ -52,7 +55,7 @@
         About us
       </div>
       <div class="aboutus-content">
-        Detrashers.org is a donation-funded platform built around making it easy to organize and find trash cleanups in your community.
+        Detrashers.org is a donation-funded, advertising-free platform built around making it easy to organize and find trash cleanups in your community.
       </div>
     </div>
 
@@ -63,7 +66,9 @@
       <div class="aboutus-content">
         There are many ways you can help: organizing, participating, donating, and spreading the word!
         <div class="help-out-links">
-          <a class="help-out-link" href="/donate">Donation Info</a><a class="help-out-link" href="https://instagram.com/detrashers">Follow Us!</a>
+          <a class="help-out-link" href="/donate">Donation Info</a>
+          <a class="help-out-link" href="https://instagram.com/detrashers">Follow Us</a>
+          <a class="help-out-link" href="mailto:help@detrashers.org">Contact Us</a>
         </div>
       </div>
     </div>
@@ -80,11 +85,20 @@
 
     <div class="aboutus-mobile">
       <div class="aboutus-content">
-        Detrashers.org is a donation-funded platform built around make it easy to organize and participate in trash cleanups in your community.
+        Detrashers.org is a donation-funded platform built around making it easy to organize and participate in trash cleanups in your community. Every pound of trash picked up by detrashers is one less pound in our streets, waterways, and oceans!
         <br>
         -
         <br>
         Enter your postal code to see a calendar with cleanup opportunities in your area!
+        <br>
+        -
+        <br>
+          There are many ways you can help: organizing, participating, donating, and spreading the word!
+        <div class="help-out-links">
+          <a class="help-out-link" href="/donate">Donation Info</a>
+          <a class="help-out-link" href="https://instagram.com/detrashers">Follow Us</a>
+          <a class="help-out-link" href="mailto:help@detrashers.org">Contact Us</a>
+        </div>
       </div>
     </div>
 
