--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,39 +1,39 @@
-<div class="jbh-standard-title">
-  My Account
-</div>
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= f.error_notification %>
-  <div class="form-inputs user-edit-form-inputs">
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
-    <% end %>
-    <div class="user-personal-info">
-      <%= f.input :first_name,
-                  hint: "This will be publicly visible." %>
-      <%= f.input :last_name,
-                  hint: "Your last name will not be visible to other users." %>
-      <%= f.input :postal_code,
-                  hint: "This is the postal code your home page will default to." %>
-      <%= f.input :region,
-                  hint: "You can leave this blank if you're in the United States" %>
-      <%= f.time_zone_select(:time_zone, ActiveSupport::TimeZone.us_zones) %>
-      <div class="user-password-change">
-        <%= f.input :password,
-                hint: "Leave it blank if you don't want to change your password.",
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-        <%= f.input :password_confirmation,
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
+<div class="edit-user-page">
+  <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+    <%= f.error_notification %>
+    <div class="form-inputs user-edit-form-inputs">
+      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+        <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+      <% end %>
+      <div class="user-personal-info">
+        <%= f.input :first_name,
+                    hint: "This will be publicly visible." %>
+        <%= f.input :last_name,
+                    hint: "Your last name will not be visible to other users." %>
+        <%= f.input :postal_code,
+                    hint: "This is the postal code your home page will default to." %>
+        <%= f.input :region %>
+        <%= f.time_zone_select(:time_zone, ActiveSupport::TimeZone.us_zones) %>
+        <div class="user-password-change">
+          <%= f.input :password,
+                  hint: "Leave it blank if you don't want to change your password.",
+                  required: false,
+                  input_html: { autocomplete: "new-password" } %>
+          <%= f.input :password_confirmation,
+                  required: false,
+                  input_html: { autocomplete: "new-password" },
+                  placeholder: 'Password confirmation' %>
+        </div>
+        <div class="password-confirmation">
+          <%= f.input :current_password,
+                  hint: "We need your current password to confirm your changes.",
+                  required: true,
+                  input_html: { autocomplete: "current-password" } %>
+        </div>
       </div>
-      <div class="password-confirmation">
-        <%= f.input :current_password,
-                hint: "We need your current password to confirm your changes.",
-                required: true,
-                input_html: { autocomplete: "current-password" } %>
+      <div class="form-actions">
+        <%= f.button :submit, "Update", class: 'btn btn-block edit-user-update-btn' %>
       </div>
-    </div>
-    <div class="form-actions">
-      <%= f.button :submit, "Update", class: 'btn btn-block edit-user-update-btn' %>
     </div>
   <% end %>
+</div>
