--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -54,8 +54,8 @@
     </ul>
     <% if current_user && current_page?('/') %>
       <form class="form-inline my-2 my-lg-0" accept-charset="UTF-8" action="/" method="get" id="home-step3">
-        <input class="form-control mr-sm-2" type="search" id="location_term" placeholder="Enter a postal code" aria-label="Change Location" name="location_term">
-        <button class="btn btn-outline-dark my-2 my-sm-0" type="submit" href="/" value="location_term">Change Location</button>
+        <input class="form-control mr-sm-2" type="search" id="location_term" placeholder="Enter a postal code" aria-label="Change Location" name="postcode">
+        <button class="btn btn-outline-dark my-2 my-sm-0" type="submit" href="/" value="postcode">Change Location</button>
       </form>
     <% end %>
   </div>
