a little cleanup of shitty old and/or unused code

--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -17,6 +17,10 @@ $darkgreen-low: rgba(0,77,0,.3);
 $darkgreen-mid: rgba(0,77,0,.6);
 $darkgreen-hvy: rgba(0,77,0,.8);
 
+$white: rgb(255,255,255);
+$white-low: rgba(255,255,255,0.3);
+$white-mid: rgba(255,255,255,0.6);
+$white-hvy: rgba(255,255,255,0.85);
 
 $lightpink: #E9B1E0;
 $lightpink-low: rgba(233,177,224,.3);
