--- a/app/views/waivers/new.html.erb
+++ b/app/views/waivers/new.html.erb
@@ -1,3 +1,3 @@
-<div class="new-waiver-page">
+<div class="new-waiver-upload-page">
     <%= render 'uploadform', waiver: @waiver, opp_id: @opp_id %>
 </div>
