--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -33,7 +33,7 @@ html, body {
 a {
   text-transform: uppercase;
   text-decoration: none;
-  color: $midgrey;
+  color: black;
 
   &:hover {
     text-decoration: none;
