--- a/app/views/opportunities/_waiver.html.erb
+++ b/app/views/opportunities/_waiver.html.erb
@@ -1,5 +1,6 @@
 <div class="oppo-waiver-wrapper">
-  <%= image_tag waiver.waiver_file.preview(resize_to_limit: [500, 500]) %>
+  <iframe src="<%= waiver_url %>" width="600" height="780" style="border: none;"> </iframe>
+
 
 
 
