--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,21 +1,15 @@
-<h2>Resend unlock instructions</h2>
-<br>
-<br>
+<%= bootstrap_form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
+  <div class="lazy-form">
+    <div class="form-inputs">
+      <%= f.email_field :email,
+                  required: true,
+                  placeholder: "Enter account email",
+                  autofocus: true,
+                  input_html: { autocomplete: "email" } %>
+    </div>
 
-<%= simple_form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
-  <%= f.error_notification %>
-  <%= f.full_error :unlock_token %>
-
-  <div class="form-inputs">
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" } %>
-  </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Resend unlock instructions" %>
+    <div class="form-actions">
+      <%= f.submit "Resend unlock instructions" %>
+    </div>
   </div>
 <% end %>
-
-<%= render "devise/shared/links" %>
