upgrade rails, do some little cleanup

--- a/app/views/pages/_opportunity_row.html.erb
+++ b/app/views/pages/_opportunity_row.html.erb
@@ -11,16 +11,18 @@
             <div class="opportunity-volunteers-needed">
               <%= opportunity.volunteers_needed %>
               <div class="volunteers-needed">
+                more<br>
                 volunteers<br>
-                needed
+                wanted
               </div>
             </div>
           <% else %>
             <div class="opportunity-volunteers-not-needed">
               0
               <div class="volunteers-needed">
+                more<br>
                 volunteers<br>
-                needed
+                wanted
               </div>
             </div>
           <% end %>
