--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -1,10 +1,13 @@
-//= require introjs
-//= require simple_calendar
 
-@import "/*";
+//= require_tree .
+
+
+@import 'theme.scss';
+@import 'mixins.scss';
+
 @import "bootstrap";
 @import "tether";
-@import "font-awesome";
+@import "font-awesome.css";
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 $enable-responsive-font-sizes: true;
 
