--- a/app/assets/stylesheets/requirements.scss
+++ b/app/assets/stylesheets/requirements.scss
@@ -3,7 +3,8 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
-
+@import 'theme.scss';
+@import 'mixins.scss';
 
 
 .requirement-show-page {
