--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -7,8 +7,10 @@
 
 @import "bootstrap";
 @import "tether";
+
 @import "font-awesome.css";
-@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+@import url('//fonts.googleapis.com/css?family=Montserrat&display=swap');
+
 $enable-responsive-font-sizes: true;
 
 
