--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -11,7 +11,17 @@ $dark: #1E2326;
 $limegreen: #99cc66;
 $limegreen-low: rgba(153,204,102,.3);
 $limegreen-mid: rgba(153,204,102,.6);
+$limegreen-hvy: rgba(153,204,102,.85);
 
+$darkgreen: #004d00;
+$darkgreen-low: rgba(0,77,0,.3);
+$darkgreen-mid: rgba(0,77,0,.6);
+$darkgreen-hvy: rgba(0,77,0,.85);
+
+$white: rgb(255,255,255);
+$white-low: rgba(255,255,255,0.3);
+$white-mid: rgba(255,255,255,0.6);
+$white-hvy: rgba(255,255,255,0.85);
 
 $lightpink: #E9B1E0;
 $lightpink-low: rgba(233,177,224,.3);
