--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag "https://www.google.com/jsapi", "chartkick" %>
     <%= favicon_link_tag asset_path('favicon.ico') %>
+
+    <script data-name="BMC-Widget" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="justbehuman" data-description="It takes lots of coffee to build a site!" data-color="#79D6B5" data-position="right" data-x_margin="18" data-y_margin="18"></script>
   </head>
   <body>
     <% if !(params[:action] == 'landing') %>
