--- a/app/views/pages/_opportunity_row.html.erb
+++ b/app/views/pages/_opportunity_row.html.erb
@@ -30,17 +30,7 @@
       </h5>
       <div class="opportunity-meta">
         <div class="opportunity-row-data">
-          <div class="opportunity-row-data-header"><%= opportunity.defined? ? 'Meeting Time:' : 'Plan by date:' %> </div>
-          <% if opportunity.overdue? %>
-            <div class="opportunity-row-data-content opportunity-row-overdue">
-              <%= opportunity.display_date %> - behind schedule!
-            </div>
-          <% else %>
-            <div class="opportunity-row-data-content">
-              <%= opportunity.display_date %>
-            </div>
-          <% end %>
-          <div class="opportunity-row-data-header">Meeting Point: </div>
+          <div class="opportunity-row-data-header">Location: </div>
           <div class="opportunity-row-data-content"><%= opportunity.address %> </div>
           <div class="opportunity-row-data-header">Category: </div>
           <div class="opportunity-row-data-content"><%= opportunity.category_title %> </div>
