--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -1,44 +1,26 @@
 <div class="landing-page-container">
-  <div class="landing-title">Welcome to</div>
   <%= image_tag("beta-logo.png", class: "landing-logo") %>
   <div class="landing-explanation">
-    <div class="landing-explanation-basic">Just Be Human is a platform where anyone can organize and give back to their community! If you have an idea for a way to improve your community in mind, create a geo-tagged <b>Opportunity</b> and give it a target completion date. Opportunities are broken down into individual tasks and responsibilities called <b>Requirements</b>.
-      <div class="landing-explanation-detail">
-        - If you know what's needed to complete the task, your Opportunity is <b>defined</b>.
+    Today more than ever, we need to come together to take care of those who cannot take care of themselves. Just Be Human is a platform designed to enable that cooperation.
+    <br>
+    <br>
+    If you or someone you know needs assistance, you can create a new Opportunity and connect with people in your community to get help.
+    <br>
+    <br>
+    If you're willing and able to help, you can sort available Opportunities and find one (or more!) that best suit your schedule and abilities.
+  </div>
+  <div class="landing-page-actions">
+    <a href="/select" class="select-oppo-type-div landing-page-action-btn">
+      <div class="select-oppo-type-btn">
+        Find Opportunities Near Me
       </div>
-      <div class="landing-explanation-detail">
-        - If you want to crowd-source the planning stages, it is <b>abstract</b>.
+    </a>
+    <a href="/opportunities/new" class="create-new-oppo-div landing-page-action-btn">
+      <div class="create-new-oppo-btn">
+        Create a new Opportunity
       </div>
-    </div>
-    <div class="landing-explanation-padding"></div>
-    <div class="landing-explanation-basic">
-      If you want to volunteer, search and filter your options to quickly find the right opportunity for your abilities and schedule.
-    </div>
+    </a>
   </div>
   <div class="landing-padding-middle"></div>
-  <div class="landing-page-continue-btn">
-    <div class="submit-post-container">
-      <a class="submit-post-btn" href="/users/sign_in" role="button">
-        Let's start volunteering!
-      </a>
-    </div>
-  </div>
-  <div class="landing-padding-middle"></div>
-  <div class="aboutus-community-guidelines">
-    <h2 class="guidelines-title">Community Guidelines</h2>
-    <div class="guidelines">
-      <div class="guideline">
-        <b>First:</b> Be excellent to each other.
-      </div>
-      <div class="guideline">
-        <b>Second:</b> See rule #1.
-      </div>
-      <div class="guideline">
-        <b>Third:</b> Using the platform for the purposes of direct or indirect financial gain is not allowed. (See Rule #2)
-      </div>
-    </div>
-  </div>
-  <div class="beta-disclaimer">
-    <small>* Forgive us our bugs! We're a small team and we're working as hard as we can to sand down the rough edges.</small>
-  </div>
+  <div class="landing-page-bottom"></div>
 </div>
