--- a/app/views/pages/map.html.erb
+++ b/app/views/pages/map.html.erb
@@ -60,19 +60,19 @@
 
 
     let greenIcon = {
-      url: "http://maps.google.com/mapfiles/ms/icons/green.png",
+      url: "https://maps.google.com/mapfiles/ms/icons/green.png",
       scaledSize: new google.maps.Size(42,42)
     };
     let blueIcon = {
-      url: "http://maps.google.com/mapfiles/ms/icons/blue.png",
+      url: "https://maps.google.com/mapfiles/ms/icons/blue.png",
       scaledSize: new google.maps.Size(42,42)
     };
     let redIcon = {
-      url: "http://maps.google.com/mapfiles/ms/icons/red.png",
+      url: "https://maps.google.com/mapfiles/ms/icons/red.png",
       scaledSize: new google.maps.Size(42,42)
     };
     let yellowIcon = {
-      url: "http://maps.google.com/mapfiles/ms/icons/yellow.png",
+      url: "https://maps.google.com/mapfiles/ms/icons/yellow.png",
       scaledSize: new google.maps.Size(42,42)
     };
 
