start the form cleanup

--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -5,12 +5,14 @@
 @import 'theme.scss';
 @import 'mixins.scss';
 
+
 @import "bootstrap";
+@import "rails_bootstrap_forms";
+
 @import "tether";
 
 @import "font-awesome.css";
 @import url('//fonts.googleapis.com/css?family=Montserrat&display=swap');
-
 $enable-responsive-font-sizes: true;
 
 
