--- a/app/assets/stylesheets/registrations.scss
+++ b/app/assets/stylesheets/registrations.scss
@@ -1,12 +1,90 @@
-// Place all the styles related to the Registrations controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
 
 @import 'theme.scss';
 @import 'mixins.scss';
 
 .register-link {
   min-width: 10vw;
+}
+
+.registration-page {
+  height: 100%;
+  width: 100%;
+/*  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;*/
+  overflow-y: scroll;
+  form {
+    width: 80vw;
+    margin: auto;
+    background: rgba(255,255,255,.85);
+    border-radius: 5px;
+    border: 1px solid $darkgreen;
+    padding-left: 3vw;
+    padding-right: 3vw;
+    padding-top: 3vh;
+
+    .birth-date-group {
+      text-align: center;
+
+      .birth-date-label {
+        font-size: 2.5rem;
+        padding-top: 1vh;
+        margin-bottom: -1.5vh;
+
+        @include respond-to(handhelds) {
+          font-size: 1.2rem;
+        }
+      }
+    }
+
+    .form-group {
+      text-align: center;
+      width: 50vw;
+      margin: auto;
+
+      label {
+        display: none;
+      }
+
+      .form-control {
+        font-size: 2.5rem;
+        margin-top: 1vh;
+
+        @include respond-to(handhelds) {
+          font-size: 1.2rem;
+        }
+      }
+
+      .country-buffer {
+        height: 1vh;
+      }
+    }
+  }
+
+  #user_country {
+    font-size: 2.5rem;
+
+    @include respond-to(handhelds) {
+      font-size: 1.4rem;
+    }
+  }
+
+  .form-standard-submit-wrapper {
+    text-align: center;
+  }
+  .form-standard-submit {
+    font-size: 3rem;
+    background-color: $darkgreen;
+    width: 40vw;
+    margin: auto;
+    color: white;
+    margin-bottom: 2vh;
+
+    @include respond-to(handhelds) {
+      font-size: 1.4rem;
+    }
+  }
 }
 
 
