--- a/app/views/opportunities/_creationform.html.erb
+++ b/app/views/opportunities/_creationform.html.erb
@@ -16,10 +16,7 @@
       </div>
     </div>
       <div class="defined-options-container" id="defined-options">
-        <h5 class="defined-options-subheader">When is it and how many people do you need?</h5>
-        <div class="completion-date-selection">
-          <%= f.input :target_completion_date, order: [:month, :day, :year, :hour, :minute] %>
-        </div>
+        <h5 class="defined-options-subheader">How many volunteers do you want?</h5>
         <div class="volunteers-required-input">
           <%= f.input :volunteers_required %>
         </div>
