--- a/app/assets/stylesheets/registrations.scss
+++ b/app/assets/stylesheets/registrations.scss
@@ -38,6 +38,21 @@
       }
     }
 
+    .form-check {
+      font-size: 1.8rem;
+      text-align: center;
+
+
+      @include respond-to(hanhelds) {
+        font-size: .9rem;
+      }
+
+
+      .form-check-label {
+        padding-left: 1vw;
+      }
+    }
+
     .form-group {
       text-align: center;
       width: 50vw;
@@ -46,6 +61,8 @@
       label {
         display: none;
       }
+
+
 
       .form-control {
         font-size: 2.5rem;
