--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Just Be Human</title>
+    <meta name="description" content="Just Be Human is a platform for organizing and managing crowd-sourced volunteerism at the local level.">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= include_gon %>
