not sure I want package.json in there but f it

--- a/app/views/pages/map.html.erb
+++ b/app/views/pages/map.html.erb
@@ -29,81 +29,7 @@
   </aside>
   <div id="map" class="map-div"></div>
 </div>
-<script>
-  let map;
+
+<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDvo5jgtwJAlgCwAA9_5v_pUgphXxe9ntY&callback=initMap" async defer></script> -->
 
 
-  function initMap()
-  {
-    map = new google.maps.Map(document.getElementById('map'), {
-      center: {lat: <%= @geopoint.latitude %>, lng: <%= @geopoint.longitude %>},
-      zoom: 13,
-      streetViewControl: false,
-      mapTypeControl: false,
-      fullscreenControl: false
-    });
-
-    let oppos = <%= raw @opportunities.map.to_json {|o|}.html_safe %>;
-
-
-    let greenIcon = {
-      url: "http://maps.google.com/mapfiles/ms/icons/green.png",
-      scaledSize: new google.maps.Size(42,42)
-    };
-    let blueIcon = {
-      url: "http://maps.google.com/mapfiles/ms/icons/blue.png",
-      scaledSize: new google.maps.Size(42,42)
-    };
-    let redIcon = {
-      url: "http://maps.google.com/mapfiles/ms/icons/red.png",
-      scaledSize: new google.maps.Size(42,42)
-    };
-    let yellowIcon = {
-      url: "http://maps.google.com/mapfiles/ms/icons/yellow.png",
-      scaledSize: new google.maps.Size(42,42)
-    };
-
-    let infoWindow = new google.maps.InfoWindow();
-
-    for (let i = 0, length = oppos.length; i < length; i++)
-    {
-      let data = oppos[i],
-        LatLng = {lat: parseFloat(data.latitude), lng: parseFloat(data.longitude)};
-        // @MATT -- fix the parse float issue
-
-      data.contentString =
-        `<div id="marker-content">
-          <div id="siteNotice"></div>
-          <h4 id="marker-title" class="marker-title"> ${data.title}</h4>
-          <p id="marker-participants" class="marker-participants">Volunteer count: ${data.volunteer_count} / ${data.volunteers_required}</p>
-          <p id="marker-followers" class="marker-followers">Followers: ${data.follower_count}</p>
-          <a href="/opportunities/${data.id}" id="marker-link" class="marker-link">See Opportunity Details</a>
-         </div>`;
-
-      let marker;
-
-      marker = new google.maps.Marker({
-        position: LatLng,
-        map: map,
-        animation: google.maps.Animation.DROP,
-        icon: greenIcon
-      });
-
-
-      (function (marker, data) {
-        google.maps.event.addListener(marker, "click", function (e) {
-          infoWindow.setContent(data.contentString);
-          infoWindow.open(map, marker);
-          event.stopPropagation(); // this prevents propagation of marker click to map click
-        });
-      })(marker, data);
-
-      //marker.addListener('click', assignListener(marker, infoWindow));
-    }
-
-    map.addListener("click", function() {
-      infoWindow.close();
-    });
-  }
-</script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDvo5jgtwJAlgCwAA9_5v_pUgphXxe9ntY&callback=initMap" async defer></script>
